<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#494949"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:context=".editPicture">

    <ImageButton
        android:id="@+id/imageButton_BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:minWidth="50dp"
        android:minHeight="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <EditText
        android:id="@+id/editText_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:height="50dp"
        android:background="@null"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:text="@string/edit_Title"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton_BackButton"
        app:layout_constraintStart_toEndOf="@+id/imageButton_BackButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_openFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:minWidth="50dp"
        android:minHeight="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText_Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_more_vert_24" />

    <FrameLayout
        android:id="@+id/style_Layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxHeight="20dp"
        android:minHeight="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Title">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingTop="2dp"
                android:paddingEnd="5dp"
                android:paddingBottom="2dp">

                <Button
                    android:id="@+id/styleZero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_border"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:maxWidth="100dp"
                    android:minWidth="100dp"
                    android:text="@string/style_styleZero" />

                <Button
                    android:id="@+id/styleOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_border"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:maxWidth="100dp"
                    android:minWidth="100dp"
                    android:text="@string/style_styleOne" />

                <Button
                    android:id="@+id/styleTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_border"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:maxWidth="100dp"
                    android:minWidth="100dp"
                    android:text="@string/style_styleTwo" />

            </LinearLayout>
        </HorizontalScrollView>

    </FrameLayout>

    <ImageView
        android:id="@+id/showImageArea"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/style_Layout"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_Download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#5E5E5E"
        android:backgroundTint="#5E5E5E"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:visibility="gone"
        app:backgroundTint="#5E5E5E"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_download_for_offline_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#5E5E5E"
        android:backgroundTint="#5E5E5E"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:visibility="gone"
        app:backgroundTint="#5E5E5E"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_save_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_Check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#5E5E5E"
        android:backgroundTint="#5E5E5E"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:visibility="gone"
        app:backgroundTint="#5E5E5E"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_check_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_Close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#5E5E5E"
        android:backgroundTint="#5E5E5E"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:visibility="gone"
        app:backgroundTint="#5E5E5E"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_close_24" />

    <Button
        android:id="@+id/showOriginal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/edittext_border"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:maxWidth="100dp"
        android:minWidth="100dp"
        android:text="@string/show_Original"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/inputLink_Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#70000000"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:background="#494949"
            android:minHeight="160dp"
            android:paddingStart="10dp"
            android:paddingTop="25dp"
            android:paddingEnd="10dp"
            android:paddingBottom="25dp">

            <EditText
                android:id="@+id/linkContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/edittext_border"
                android:gravity="start|center_vertical"
                android:hint="@string/hint_input_link"
                android:maxHeight="50dp"
                android:minHeight="50dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="#fff"
                android:textColorHint="#ccc"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <Button
                    android:id="@+id/button_LinkConfigm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_border"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:text="@string/text_Configm"
                    android:layout_marginEnd="5dp"
                    android:textAllCaps="true" />

                <Button
                    android:id="@+id/button_LinkCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_border"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:text="@string/text_Cancel"
                    android:layout_marginStart="5dp"
                    android:textAllCaps="true" />
            </LinearLayout>

        </FrameLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>